Minor fixes
Updated experience, removed horizontal scroll, added external link to portfolio

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,11 +56,17 @@
     --chart-5: 340 75% 55%;
   }
 }
+
 @layer base {
   * {
     @apply border-border;
   }
+  
+  html {
+    @apply overflow-x-hidden;
+  }
+  
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-x-hidden;
   }
 }
